pod-security/baseline/restrict-apparmor-profiles/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../restrict-apparmor-profiles.yaml
assert:
- policy-assert.yaml
