pod-security/baseline/restrict-apparmor-profiles/e2e/good-pod.yaml
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: runtime/default
spec:
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: localhost/foo
spec:
  containers:
  - name: container01
    image: busybox:1.35
