pod-security/baseline/restrict-apparmor-profiles/e2e/enforce-policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-apparmor-profiles
spec:
  validationActions: [Deny]
status:
  conditionStatus:
    ready: true
